Ajout de la Footbar + page IA

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     --color-primary: #272030;
     --color-secondary-orange: #f08a4f;
     --color-secondary-pink: #c2858c;
-    --color-white: #e8e0db;
+    --color-offwhite: #e8e0db;
     --color-black: #010101;
 }
 
